<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_button_pad">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="backspace"
                android:text="@string/backspace"
                android:textSize="24dp"
                app:backgroundTint="#e40303"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="operator"
                android:text="@string/divide"
                android:textSize="36dp"
                app:backgroundTint="#e40303"
                app:elevation="0dp" />
        </LinearLayout>
        <!-- this is LINE 2 of BUTTONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#E91E63"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn7"
                android:textSize="36dp"
                app:backgroundTint="#ff9500"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn8"
                android:textSize="36dp"
                app:backgroundTint="#ff9500"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn9"
                android:textSize="36dp"
                app:backgroundTint="#ff9500"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="operator"
                android:text="@string/multiply"
                android:textSize="36dp"
                app:backgroundTint="#ff9500"
                app:elevation="0dp" />
        </LinearLayout>
        <!-- this is LINE 3 of BUTTONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button8"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn4"
                android:textSize="36dp"
                app:backgroundTint="#FFEB3B"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn5"
                android:textSize="36dp"
                app:backgroundTint="#FFEB3B"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn6"
                android:textSize="36dp"
                app:backgroundTint="#FFEB3B"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="operator"
                android:text="@string/minus"
                android:textSize="36dp"
                app:backgroundTint="#FFEB3B"
                app:elevation="0dp" />
        </LinearLayout>
        <!-- this is LINE 4 of BUTTONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button12"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn1"
                android:textSize="36dp"
                app:backgroundTint="#4CAF50"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button13"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn2"
                android:textSize="36dp"
                app:backgroundTint="#4CAF50"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn3"
                android:textSize="36dp"
                app:backgroundTint="#4CAF50"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="operator"
                android:text="@string/plus"
                android:textSize="36dp"
                app:backgroundTint="#4CAF50"
                app:elevation="0dp" />
        </LinearLayout>
        <!-- this is LINE 5 of BUTTONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button17"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="decimal"
                android:text="@string/dot"
                android:textSize="36dp"
                app:backgroundTint="#673AB7"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="51dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="digit"
                android:text="@string/btn0"
                android:textSize="36dp"
                app:backgroundTint="#673AB7"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="clear"
                android:text="@string/clear"
                android:textSize="36dp"
                app:backgroundTint="#673AB7"
                app:elevation="0dp" />

            <Button
                android:id="@+id/button18"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="equal"
                android:text="@string/equalto"
                android:textSize="36dp"
                app:backgroundTint="#673AB7"
                app:elevation="0dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

